[package]
name = "actix-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.7"
actix-web = "0.7"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
log = "0.4"
redis = "0.21.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.68"
serde_urlencoded = "0.5"
